<resources>
    <string name="app_name">TimeLine</string>
    <!-- Strings related to login -->
    <string name="prompt_username">نام کاربری</string>
    <string name="prompt_password">رمز عبور</string>
    <string name="prompt_phone">شماره موبایل</string>
    <string name="prompt_st_number">شماره دانشجویی</string>
    <string name="action_sign_in_short">ورود</string>
    <string name="sign_up">ثبت نام</string>
    <string name="admin">ادمین</string>
    <string name="student">دانشجو</string>
    <string name="invalid_ad_username">نام کاربری باید بیش از 5 رقم باشد.</string>
    <string name="invalid_ad_password">رمز عبور باید بیش از 5 رقم باشد.</string>
    <string name="invalid_st_username">شماره دانشجویی باید بیش از 7 رقم باشد.</string>
    <string name="invalid_st_password">شماره دانشجویی نباید شامل کاراکتر فاصله باشد.</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="enter_text_input">متن خود را تای‍‍پ کنید</string>
    <string name="image_title">ایجاد عنوان برای عکس</string>
    <string name="edit_dialog_title">ویرایش متن مورد نظر</string>
    <string name="confirm">تایید</string>
    <string name="send">ارسال</string>
    <string name="cancel">لغو</string>

    <string name="invalid_data">اطلاعات وارد شده نامعتبر است.</string>
    <string name="storage_access">برنامه به حافظه دسترسی دارد</string>
    <string name="storage_no_access">عدم دسترسی به حافظه</string>

    <string name="action_contact">مخاطبین</string>
    <string name="action_settings">تنظیمات</string>
    <string name="action_favorites">برگزیده ها</string>
    <string name="action_logout">خروج</string>
    <string name="action_search">جستجو</string>
    <string name="menu_delete">حذف</string>
    <string name="menu_edit">ویرایش</string>
    <string name="menu_fav">مورد علاقه</string>
    <string name="search_message">جستجو کتید</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">تنظیمات فونت</string>
    <string name="sync_header">پس زمینه</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="font_title">انتخاب نوع فونت</string>
    <string name="font_size">اندازه فونت متن</string>
    <string name="theme_color">رنگ زمینه</string>

    <!-- Sync Preferences -->
    <string name="theme_dark">تاریک</string>
    <string name="theme_light">روشن</string>

    <string name="title_activity_user_chat">UserChatActivity</string>
    <string name="title_activity_public">PublicActivity</string>
    <string name="title_activity_st_settings">Settings</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
