<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.timeline.admin.ScrollingActivity">

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        android:icon="@drawable/icon_menu_hor" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="101"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/action_logout" />

</menu>
